--- a/TestingEz/src/main/resources/templates/sign-in.html
+++ b/TestingEz/src/main/resources/templates/sign-in.html
@@ -4,7 +4,7 @@
 <body class="bg-light vh-100 d-flex justify-content-center align-items-center font">
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="bg-light p-5 border border-2 rounded fs-5 shadow">
-        <h2 class="text-center" th:text="#{login}">Login</h2>
+        <h2 class="text-center" th:text="#{login}"></h2>
         <form action="#"
               class="d-flex flex-column"
               method="post"
@@ -12,9 +12,8 @@
               th:action="@{/account/login}"
               th:object="${userSignInData}">
             <div th:if="${error}" class="text-danger fs-6 text-center" th:text="#{invalidCredentials}">
-                invalid credentials
             </div>
-            <label for="username" class="form-label" th:text="#{loginUsername}">Username:</label>
+            <label for="username" class="form-label" th:text="#{loginUsername}"></label>
             <div class="input-group">
                 <span class="input-group-text" id="inputGroupPrepend">@</span>
                 <input
@@ -31,7 +30,7 @@
                     th:if="${#fields.hasErrors('username')}"
                     th:errors="*{username}"
                     class="text-danger fs-6"></div>
-            <label for="password" class="form-label" th:text="#{loginPassword}">Password:</label>
+            <label for="password" class="form-label" th:text="#{loginPassword}"></label>
             <div class="input-group">
                 <input
                         class="form-control border fs-6"
@@ -49,10 +48,9 @@
                     class="text-danger fs-6"></div>
             <button
                     type="submit"
-                    class="btn btn-light border border-2 rounded fs-5 mt-3"
+                    class="btn btn-dark border border-2 border-black rounded fs-5 mt-3"
                     th:text="#{signIn}"
             >
-                Sign In
             </button>
         </form>
     </div>
