--- a/TestingEz/src/main/resources/templates/success.html
+++ b/TestingEz/src/main/resources/templates/success.html
@@ -4,11 +4,11 @@
 <body class="font">
 <div class="d-flex flex-column align-items-center justify-content-center vh-100 bg-light">
     <div class="bg-light shadow rounded p-5 text-center border border-2">
-        <h1 th:text="#{successMessage}">Everything is alright!</h1>
+        <h1 th:text="#{successMessage}"></h1>
         <p class="fs-3"><span th:text="${message}"></span></p>
         <a class="link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fs-3"
            href="/user/home"
-           th:text="#{homePage}">Home Page</a>
+           th:text="#{homePage}"></a>
     </div>
 </div>
 <script
