--- a/TestingEz/src/main/resources/templates/fragments/headers.html
+++ b/TestingEz/src/main/resources/templates/fragments/headers.html
@@ -6,10 +6,10 @@
 <body class="font">
 
 <header th:fragment="header" class="flex-shrink-0 border-bottom border-2">
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light shadow">
         <div class="container-fluid gap-1">
             <a
-                    class="navbar-brand bg-light rounded px-1 fs-5 border border-2"
+                    class="btn btn-light navbar-brand rounded px-1 fs-5 border border-2"
                     th:href="@{/user/profile}"
             >
                 <img
@@ -18,7 +18,8 @@
                         width="35"
                         height="35"
                         class="d-inline-block align-text-middle me-1"
-                /><span sec:authentication="name"></span></a
+                />
+                <span sec:authentication="name" class="text-dark"></span></a
             >
             <button
                     class="navbar-toggler"
@@ -34,38 +35,38 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
                     <a
-                            class="nav-link text-center fs-5 text-dark"
+                            class="btn btn-light nav-link text-center fs-5 text-dark"
                             aria-current="page"
                             th:href="@{/user/home}"
                             th:text="#{headerHome}"
                     >Home</a>
                     <a
-                            class="nav-link text-center fs-5 text-dark"
+                            class="btn btn-light nav-link text-center fs-5 text-dark"
                             aria-current="page"
                             th:href="@{/test/join}"
                             th:text="#{joinTest}"
                     >Join Test</a>
                     <a
-                            class="nav-link text-center fs-5 text-dark"
+                            class="btn btn-light nav-link text-center fs-5 text-dark"
                             th:href="@{/test/create}"
                             th:text="#{createTest}"
                     >Create Test</a>
-                    <a class="nav-link text-center fs-5 text-dark"
+                    <a class="btn btn-light nav-link text-center fs-5 text-dark"
                        th:href="@{/user/my-results(page=0, size=5)}"
                        th:text="#{myResults}">
                         My Results
                     </a>
-                    <a class="nav-link text-center fs-5 text-dark"
+                    <a class="btn btn-light nav-link text-center fs-5 text-dark"
                        th:href="@{/user/my-tests(page=0, size=5)}"
                        th:text="#{myTests}">
                         My Tests
                     </a>
-                    <a class="nav-link text-center fs-5 text-dark"
+                    <a class="btn btn-light nav-link text-center fs-5 text-dark"
                        th:href="@{/test/all(page=0, size=5)}"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
                        th:text="#{allTests}"
                     >All Tests</a>
-                    <a class="nav-link text-center fs-5 text-dark"
+                    <a class="btn btn-light nav-link text-center fs-5 text-dark"
                        href="#"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
                        th:text="#{allUsers}"
@@ -77,7 +78,7 @@
                             method="post"
                             th:action="@{/account/logout}">
                         <button
-                                class="bnt bg-light rounded px-3 py-2 fs-5 text-center mt-3 mt-lg-0 border border-2"
+                                class="btn btn-dark rounded px-3 py-2 fs-5 text-center mt-3 mt-lg-0 border border-black border-2"
                                 type="submit"
                                 th:text="#{logout}"
                         >
