--- a/TestingEz/src/main/resources/templates/impr-ideas.html
+++ b/TestingEz/src/main/resources/templates/impr-ideas.html
@@ -12,9 +12,10 @@
             <div class="col-sm-10 col-md-6 border border-2 p-2 rounded">
                 <p class="text-wrap" th:text="${ideaData.idea}"></p>
                 <div class="d-flex gap-1">
-                    <button class="w-50 btn border border-2 rounded">Approve</button>
-                    <a class="w-50 btn border border-2 rounded dis"
-                       th:href="@{/user/improvements/delete/{id}(id=${ideaData.id})}">Disapprove</a>
+                    <button type="button" class="w-50 btn btn-dark border border-black border-2 rounded">Approve
+                    </button>
+                    <a class="w-50 btn btn-dark border border-2 rounded dis"
+                       th:href="@{/user/improvements/delete/{id}(id=${ideaData.id})}"><!--TODO-->Disapprove</a>
                 </div>
             </div>
         </div>
@@ -22,6 +23,10 @@
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
 
+<script
+        type="module"
+        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
+></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
