--- a/TestingEz/src/main/resources/templates/question-edit.html
+++ b/TestingEz/src/main/resources/templates/question-edit.html
@@ -13,10 +13,10 @@
                     th:action="@{/questions/edit/{id}(id=*{id})}"
                     th:object="${questionData}">
                 <div>
-                    <h2 class="text-center"><span th:text="#{questionNumber}">Question №</span><span
+                    <h2 class="text-center"><span th:text="#{questionNumber}"></span><span
                             th:text="*{number}"></span></h2>
                     <div class="form-group mb-3">
-                        <input class="form-control border border-black border-2 shadow fs-5 text-center"
+                        <input class="form-control border border-2 shadow fs-5 text-center"
                                id="question"
                                name="question"
                                th:placeholder="#{enterYourQuestion}"
@@ -31,7 +31,7 @@
                     <div class="row">
                         <div class="col-md-6 mb-1">
                             <div class="form-group">
-                                <input class="form-control border border-black shadow fs-5"
+                                <input class="form-control border fs-5"
                                        id="answer1"
                                        name="answer1"
                                        th:placeholder="#{enterAnswer1}"
@@ -46,7 +46,7 @@
                         </div>
                         <div class="col-md-6 mb-1">
                             <div class="form-group">
-                                <input class="form-control border border-black shadow fs-5"
+                                <input class="form-control border fs-5"
                                        id="answer2"
                                        name="answer2"
                                        th:placeholder="#{enterAnswer2}"
@@ -61,7 +61,7 @@
                         </div>
                         <div class="col-md-6 mb-2">
                             <div class="form-group">
-                                <input class="form-control border border-black shadow fs-5"
+                                <input class="form-control border fs-5"
                                        id="answer3"
                                        name="answer3"
                                        th:placeholder="#{enterAnswer3}"
@@ -76,7 +76,7 @@
                         </div>
                         <div class="col-md-6 mb-2">
                             <div class="form-group">
-                                <input class="form-control border border-black shadow fs-5"
+                                <input class="form-control border fs-5"
                                        id="answer4"
                                        name="answer4"
                                        th:placeholder="#{enterAnswer4}"
@@ -92,7 +92,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-sm-8 col-md-2 text-end">
-                            <input class="form-control border border-black shadow fs-5"
+                            <input class="form-control border fs-5"
                                    id="correctAnswer"
                                    name="correctAnswer"
                                    th:placeholder="#{correctAnswer}"
@@ -110,9 +110,8 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center gap-1 mt-3">
-                    <button type="submit" class="btn btn-success border border-black border-2 shadow fs-4"
+                    <button type="submit" class="btn btn-success border border-black border-2 fs-4"
                             th:text="#{complete}">
-                        Complete
                     </button>
                 </div>
             </form>
@@ -121,7 +120,10 @@
 
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
-
+<script
+        type="module"
+        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
+></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
