--- a/TestingEz/src/main/resources/templates/sign-up.html
+++ b/TestingEz/src/main/resources/templates/sign-up.html
@@ -6,7 +6,7 @@
     <main class="container d-flex flex-column flex-fill align-item-center justify-content-center flex-grow-1 bg-light">
         <div class="row justify-content-center">
             <div class="col-sm-12 col-md-10 col-lg-8 bg-light rounded border border-2 p-3 shadow">
-                <h2 class="text-center" th:text="#{register}">Register</h2>
+                <h2 class="text-center" th:text="#{register}"></h2>
                 <form
                         class="needs-validation"
                         method="post"
@@ -16,7 +16,7 @@
                 >
                     <div class="row justify-content-center">
                         <div class="col">
-                            <label for="username" class="form-label" th:text="#{registerUsername}">Username:</label>
+                            <label for="username" class="form-label" th:text="#{registerUsername}"></label>
                             <div class="input-group has-validation">
                                 <input
                                         aria-describedby="inputGroupPrepend"
@@ -35,16 +35,14 @@
                                  th:errors="*{username}"
                                  th:if="${#fields.hasErrors('username')}">
                             </div>
-                            <div th:if="${invalidUsername}" class="text-danger fs-6" th:text="#{usernameInUse}">This
-                                username is
-                                already in use.
+                            <div th:if="${invalidUsername}" class="text-danger fs-6" th:text="#{usernameInUse}">
                             </div>
                         </div>
                     </div>
 
                     <div class="row justify-content-center">
                         <div class="col">
-                            <label for="password" class="form-label" th:text="#{registerPassword}">Password:</label>
+                            <label for="password" class="form-label" th:text="#{registerPassword}"></label>
                             <div class="input-group has-validation">
                                 <input
                                         class="form-control border fs-6"
@@ -62,15 +60,13 @@
                                  th:if="${#fields.hasErrors('password')}">
                             </div>
                             <div th:if="${invalidPasswords}" class="text-danger fs-6" th:text="#{passwordsNotMatching}">
-                                Passwords DO NOT match.
                             </div>
                         </div>
                     </div>
 
                     <div class="row justify-content-center">
                         <div class="col">
-                            <label for="confirmPassword" class="form-label" th:text="#{confirmPassword}">Confirm
-                                password:</label>
+                            <label for="confirmPassword" class="form-label" th:text="#{confirmPassword}"></label>
                             <div class="input-group has-validation">
                                 <input
                                         class="form-control border fs-6"
@@ -92,7 +88,7 @@
 
                     <div class="row justify-content-center">
                         <div class="col">
-                            <label for="firstName" class="form-label" th:text="#{firstName}">First Name:</label>
+                            <label for="firstName" class="form-label" th:text="#{firstName}"></label>
                             <div class="input-group has-validation">
                                 <input
                                         class="form-control border fs-6"
@@ -113,7 +109,7 @@
 
                     <div class="row justify-content-center">
                         <div class="col">
-                            <label for="lastName" class="form-label" th:text="#{lastName}">Last Name:</label>
+                            <label for="lastName" class="form-label" th:text="#{lastName}"></label>
                             <div class="input-group has-validation">
                                 <input
                                         class="form-control border fs-6"
@@ -134,7 +130,7 @@
 
                     <div class="row justify-content-center">
                         <div class="col">
-                            <label for="email" class="form-label" th:text="#{registerEmail}">Email:</label>
+                            <label for="email" class="form-label" th:text="#{registerEmail}"></label>
                             <div class="input-group has-validation">
                                 <input
                                         class="form-control border fs-6"
@@ -151,15 +147,14 @@
                                  th:errors="*{email}"
                                  th:if="${#fields.hasErrors('email')}">
                             </div>
-                            <div th:if="${invalidEmail}" class="text-danger fs-6" th:text="#{emailInUse}">This email is
-                                already in use.
+                            <div th:if="${invalidEmail}" class="text-danger fs-6" th:text="#{emailInUse}">
                             </div>
                         </div>
                     </div>
 
                     <div class="row justify-content-center">
                         <div class="col">
-                            <label for="phone" class="form-label" th:text="#{registerPhone}">Phone number:</label>
+                            <label for="phone" class="form-label" th:text="#{registerPhone}"></label>
                             <div class="input-group has-validation">
                                 <input
                                         class="form-control border fs-6"
@@ -177,8 +172,7 @@
                                  th:errors="*{phone}"
                                  th:if="${#fields.hasErrors('phone')}">
                             </div>
-                            <div th:if="${invalidPhone}" class="text-danger fs-6" th:text="#{phoneInUse}">This phone is
-                                already in use.
+                            <div th:if="${invalidPhone}" class="text-danger fs-6" th:text="#{phoneInUse}">
                             </div>
                         </div>
                     </div>
@@ -187,10 +181,9 @@
                         <div class="col d-flex justify-content-center">
                             <button
                                     type="submit"
-                                    class="btn btn-light border border-2 rounded fs-5 px-5 mt-3"
+                                    class="btn btn-dark border border-2 border-black rounded fs-5 px-5 mt-3"
                                     th:text="#{signUp}"
                             >
-                                Sign Up
                             </button>
                         </div>
                     </div>
