--- a/TestingEz/src/main/resources/templates/user-home.html
+++ b/TestingEz/src/main/resources/templates/user-home.html
@@ -9,7 +9,7 @@
     <main class="container d-flex flex-column bg-light justify-content-center flex-grow-1 gap-3">
         <div class="row align-items-center justify-content-center">
             <div class="col-sm-10 col-lg-8">
-                <h1 class="mb-3" th:text="#{testOfTheDay}">Test of the Day</h1>
+                <h1 class="mb-3" th:text="#{testOfTheDay}"></h1>
                 <div class="rounded shadow border border-2 p-2 fs-5 text-center">
                     <div th:each="questionObject, iStat: ${testOfTheDay}">
                         <p th:text="${iStat.index + 1} + '.' + ${questionObject.question}"></p>
@@ -18,21 +18,22 @@
                                     class="bg-light rounded border border-2 py-1 w-75 text-center"
                                     th:data-answer="${questionObject.answer}"
                                     th:id="'answer-' + ${iStat.index}">
-                            <button class="btn btn-light px-3 border border-2 rounded check-btn"
+                            <button class="btn btn-dark px-3 border border-2 border-black rounded check-btn"
                                     th:text="#{check}"
                                     th:data-index="${iStat.index}">
-                                check
                             </button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-10 col-lg-4">
+                <!-- TODO -->
                 <h1 class="mb-3">Bored?</h1>
                 <div class="text-center p-2 mb-3 border border-2 rounded shadow">
                     <h2>Click the Button Game</h2>
                     <p>Click the button as many times as you can in 10 seconds!</p>
-                    <button id="game-button" class="btn btn-light px-3 border border-2 rounded">
+                    <button type="button" id="game-button"
+                            class="btn btn-dark px-3 border border-2 border-black rounded">
                         Click Me!
                     </button>
                     <p class="mt-3">Score: <span id="score" class="score">0</span></p>
@@ -46,7 +47,8 @@
                            class="form-control bg-light rounded border border-2 text-center"
                            placeholder="Enter your guess">
                     <button id="guess-button"
-                            class="btn btn-light px-3 border border-2 rounded mt-3">
+                            type="button"
+                            class="btn btn-dark px-3 border border-2 border-black rounded mt-3">
                         Guess!
                     </button>
                     <p class="mt-3 feedback" id="feedback"></p>
@@ -101,7 +103,9 @@
                                id="idea"
                                type="text"
                                th:field="*{idea}">
-                        <button class="btn btn-dark border border-2 px-5" id="is" type="submit">SEND</button>
+                        <button class="btn btn-dark border border-2 border-black px-5" id="is" type="submit">
+                            SEND
+                        </button>
                         <div class="text-danger fs-6"
                              th:errors="*{idea}"
                              th:if="${#fields.hasErrors('idea')}">
@@ -110,7 +114,6 @@
                             Thanks! Your improvement idea was sent!
                         </div>
                     </form>
-                    <span class="bg-success d-none" id="mes">Thanks!</span>
                 </div>
             </div>
         </div>
@@ -137,5 +140,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
