--- a/TestingEz/src/main/resources/templates/user-profile-edit.html
+++ b/TestingEz/src/main/resources/templates/user-profile-edit.html
@@ -7,7 +7,7 @@
     <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="container d-flex flex-column flex-fill align-item-center justify-content-center gap-3 flex-grow-1">
-        <h1 class="text-center" th:text="#{myProfile}">My Profile</h1>
+        <h1 class="text-center" th:text="#{myProfile}"></h1>
         <div class="row bg-light shadow rounded border border-2 p-3">
             <div class="col-sm-12 col-md-5 mb-3 mb-sm-3 mb-md-0 d-flex flex-column align-items-center gap-2">
                 <img
@@ -17,9 +17,9 @@
                         height="300px"
                         class="shadow rounded-circle border border-2"
                 />
-                <button class="btn bg-light rounded text-center border border-2 w-50 fs-5"
+                <button type="button"
+                        class="btn btn-dark rounded text-center border border-2 border-black w-50 fs-5"
                         th:text="#{change}">
-                    change
                 </button>
             </div>
             <div class="col-sm-12 col-md-7 d-flex flex-column align-items-center">
@@ -33,9 +33,7 @@
                          th:errors="*{username}"
                          th:if="${#fields.hasErrors('username')}">
                     </div>
-                    <div th:if="${invalidUsername}" class="text-danger fs-6" th:text="#{usernameInUse}">This username
-                        is
-                        already in use.
+                    <div th:if="${invalidUsername}" class="text-danger fs-6" th:text="#{usernameInUse}">
                     </div>
                     <input
                             class="form-control border border-2 rounded fs-5 mb-2"
@@ -69,8 +67,7 @@
                          th:errors="*{email}"
                          th:if="${#fields.hasErrors('email')}">
                     </div>
-                    <div th:if="${invalidEmail}" class="text-danger fs-6" th:text="#{emailInUse}">This email is
-                        already in use.
+                    <div th:if="${invalidEmail}" class="text-danger fs-6" th:text="#{emailInUse}">
                     </div>
                     <input
                             class="form-control border border-2 rounded fs-5 mb-2"
@@ -82,8 +79,7 @@
                          th:errors="*{phone}"
                          th:if="${#fields.hasErrors('phone')}">
                     </div>
-                    <div th:if="${invalidPhone}" class="text-danger fs-6" th:text="#{phoneInUse}">This phone is
-                        already in use.
+                    <div th:if="${invalidPhone}" class="text-danger fs-6" th:text="#{phoneInUse}">
                     </div>
                     <input
                             class="form-control border border-2 rounded fs-5 mb-2"
@@ -99,15 +95,13 @@
                             readonly
                             type="text">
                     <div class="d-flex justify-content-center gap-2 w-100">
-                        <button class="btn btn-success rounded text-center border border-2 w-50 fs-5"
+                        <button class="btn btn-success rounded text-center border border-2 border-black w-50 fs-5"
                                 type="submit"
                                 th:text="#{save}">
-                            save
                         </button>
                         <a th:href="@{/user/profile}"
-                           class="btn bg-light rounded text-center border border-2 w-50 fs-5"
+                           class="btn btn-dark rounded text-center border border-2 w-50 fs-5"
                            th:text="#{cancel}">
-                            cancel
                         </a>
                     </div>
                 </form>
@@ -115,9 +109,9 @@
         </div>
         <div class="row justify-content-center text-center">
             <div class="col-sm-8 col-md-4">
-                <button class="btn btn-danger rounded text-center border border-2 fs-5 px-3"
+                <button type="button"
+                        class="btn btn-danger rounded text-center border border-2 border-black fs-5 px-3"
                         th:text="#{deleteAccount}">
-                    Delete Account
                 </button>
             </div>
         </div>
