--- a/TestingEz/src/main/resources/templates/user-profile.html
+++ b/TestingEz/src/main/resources/templates/user-profile.html
@@ -7,7 +7,7 @@
     <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="container d-flex flex-column flex-fill align-item-center justify-content-center gap-3 flex-grow-1">
-        <h1 class="text-center" th:text="#{myProfile}">My Profile</h1>
+        <h1 class="text-center" th:text="#{myProfile}"></h1>
         <div class="row bg-light shadow rounded border border-2 p-3">
             <div class="col-sm-12 col-md-5 mb-3 mb-sm-3 mb-md-0 d-flex flex-column align-items-center gap-2">
                 <img
@@ -17,9 +17,9 @@
                         height="300px"
                         class="shadow rounded-circle border border-2"
                 />
-                <button class="btn bg-light rounded text-center border border-2 w-50 fs-5"
+                <button type="button"
+                        class="btn btn-dark rounded text-center border border-2 border-black w-50 fs-5"
                         th:text="#{change}">
-                    change
                 </button>
             </div>
             <div class="col-sm-12 col-md-7 d-flex flex-column align-items-center" th:object="${userProfileData}">
@@ -72,17 +72,16 @@
                         type="text"
                         th:value="'Role: ' + *{role}">
                 <a th:href=" @{/user/profile/edit}"
-                   class="btn bg-warning rounded text-center border border-2 w-50 fs-5"
+                   class="btn btn-warning rounded text-center border border-2 w-50 fs-5"
                    th:text="#{editProfile}">
-                    Edit profile
                 </a>
             </div>
         </div>
         <div class="row justify-content-center text-center">
             <div class="col-sm-8 col-md-4">
-                <button class="btn btn-danger rounded text-center border border-2 fs-5 px-3"
+                <button type="button"
+                        class="btn btn-danger rounded text-center border border-2 border-black fs-5 px-3"
                         th:text="#{deleteAccount}">
-                    Delete Account
                 </button>
             </div>
         </div>
