--- a/TestingEz/src/main/resources/templates/all-tests.html
+++ b/TestingEz/src/main/resources/templates/all-tests.html
@@ -7,13 +7,11 @@
     <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="container d-flex flex-column justify-content-center flex-grow-1">
-        <!-- TODO -->
-        <h3>My Tests</h3>
+        <h3 th:text="#{myTests}"></h3>
         <div class="container shadow rounded border border-2 p-5">
             <span class="fs-4"
+                  th:text="#{thereArentAnyTestSoFar}"
                   th:if="${paginatedTests.isEmpty()}">
-                <!--TODO-->
-                You don't have any created tests so far.
             </span>
             <div class="row align-items-center border border-2 shadow rounded p-2 mb-2"
                  th:each="test, iStat : ${paginatedTests}">
@@ -21,16 +19,15 @@
                     <span th:text="${iStat.index + 1} + '.' + ${test.name}"></span>
                 </div>
                 <div class="col-sm-12 col-md-3">
-                    <span th:text="'Current status: ' + ${test.status}"></span>
+                    <span th:text="#{status} + ' ' + ${test.status}"></span>
                 </div>
                 <div class="col-sm-12 col-md-3">
-                    <span th:text="'Last updated: ' + ${test.dateUpdated}"></span>
+                    <span th:text="#{lastUpdated} + ' ' + ${test.dateUpdated}"></span>
                 </div>
                 <div class="col-sm-12 col-md-3 text-end">
                     <a class="btn btn-dark px-3 border border-2 rounded"
+                       th:text="#{details}"
                        th:href="@{/test/details/{id}(id=${test.id})}">
-                        <!-- TODO -->
-                        details
                     </a>
                 </div>
             </div>
