--- a/TestingEz/src/main/resources/templates/user-home.html
+++ b/TestingEz/src/main/resources/templates/user-home.html
@@ -27,42 +27,41 @@
                 </div>
             </div>
             <div class="col-sm-10 col-lg-4">
-                <!-- TODO -->
-                <h1 class="mb-3">Bored?</h1>
+                <h1 class="mb-3" th:text="#{bored}"></h1>
                 <div class="text-center p-2 mb-3 border border-2 rounded shadow">
-                    <h2>Click the Button Game</h2>
-                    <p>Click the button as many times as you can in 10 seconds!</p>
-                    <button type="button" id="game-button"
-                            class="btn btn-dark px-3 border border-2 border-black rounded">
-                        Click Me!
+                    <h2 th:text="#{clickTheButtonGame}"></h2>
+                    <p th:text="#{clickTheButtonAsMany}"></p>
+                    <button class="btn btn-dark px-3 border border-2 border-black rounded" id="game-button"
+                            th:text="#{clickMe}"
+                            type="button">
                     </button>
-                    <p class="mt-3">Score: <span id="score" class="score">0</span></p>
+                    <p class="mt-3" th:text="#{score}"><span id="score" class="score">0</span></p>
                     <p id="message" class="mt-3"></p>
                 </div>
                 <div class="text-center p-2 border border-2 rounded shadow">
-                    <h2>Guess the Number Game</h2>
-                    <p>Guess a number between 1 and 100!</p>
+                    <h2 th:text="#{guessTheNumberGame}"></h2>
+                    <p th:text="#{guessANumberBetween}"></p>
                     <input type="number"
                            id="guess-input"
                            class="form-control bg-light rounded border border-2 text-center"
-                           placeholder="Enter your guess">
-                    <button id="guess-button"
-                            type="button"
-                            class="btn btn-dark px-3 border border-2 border-black rounded mt-3">
-                        Guess!
+                           th:placeholder="#{enterYourGuess}">
+                    <button class="btn btn-dark px-3 border border-2 border-black rounded mt-3"
+                            id="guess-button"
+                            th:text="#{guess}"
+                            type="button">
                     </button>
                     <p class="mt-3 feedback" id="feedback"></p>
                 </div>
             </div>
         </div>
         <div class="row mb-5 justify-content-center">
-            <h1 class="mb-3" th:text="#{miscellaneous}">Miscellaneous</h1>
+            <h1 class="mb-3" th:text="#{miscellaneous}"></h1>
             <div class="col-sm-10 col-md-4 mb-2">
                 <div id="factsCarousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-item p-2 rounded border border-2 shadow"
                          th:each="factObject, iStat : ${factsOfTheDay}"
                          th:classappend="${iStat.index == 0} ? 'active' : ''">
-                        <p class="card-title fw-bold fs-5" th:text="'Random Fact №' + ${iStat.index + 1}"></p>
+                        <p class="card-title fw-bold fs-5" th:text="#{randomFact} + ${iStat.index + 1}"></p>
                         <span class="card-text fs-6" th:text="${factObject.fact}"></span>
                     </div>
                 </div>
@@ -72,7 +71,7 @@
                     <div class="carousel-item p-2 rounded border border-2 shadow"
                          th:each="jokeObject, iStat : ${jokesOfTheDay}"
                          th:classappend="${iStat.index == 0} ? 'active' : ''">
-                        <p class="card-title fw-bold fs-5" th:text="'Random Joke №' + ${iStat.index + 1}"></p>
+                        <p class="card-title fw-bold fs-5" th:text="#{randomJoke} + ${iStat.index + 1}"></p>
                         <span class="card-text fs-6" th:text="${jokeObject.joke}"></span>
                     </div>
                 </div>
@@ -82,7 +81,7 @@
                     <div class="carousel-item p-2 rounded border border-2 shadow"
                          th:each="quoteObject, iStat : ${quotesOfTheDay}"
                          th:classappend="${iStat.index == 0} ? 'active' : ''">
-                        <p class="card-title fw-bold fs-5" th:text="'Random Quote №' + ${iStat.index + 1}"></p>
+                        <p class="card-title fw-bold fs-5" th:text="#{randomQuote} + ${iStat.index + 1}"></p>
                         <p class="card-text fs-6 fst-italic" th:text="${quoteObject.quote}"></p>
                         <span class="card-text fs-6 text-end fw-bold" th:text="'- ' + ${quoteObject.author}"></span>
                     </div>
@@ -92,8 +91,8 @@
         <div class="row justify-content-center border-top border-2">
             <div class="col-sm-10 col-md-6 my-5">
                 <div class="border border-2 rounded shadow p-3 d-flex flex-column justify-content-center align-items-center">
-                    <h4>Help us make "TestingEz" better!</h4>
-                    <span>How to improve?</span>
+                    <h4 th:text="#{helpUs}"></h4>
+                    <span th:text="#{howToImprove}"></span>
                     <form
                             th:action="@{/user/improvements/post}"
                             th:object="${improvementData}"
@@ -103,15 +102,14 @@
                                id="idea"
                                type="text"
                                th:field="*{idea}">
-                        <button class="btn btn-dark border border-2 border-black px-5" id="is" type="submit">
-                            SEND
+                        <button class="btn btn-dark border border-2 border-black px-5" id="is" type="submit"
+                                th:text="#{send}">
                         </button>
                         <div class="text-danger fs-6"
                              th:errors="*{idea}"
                              th:if="${#fields.hasErrors('idea')}">
                         </div>
-                        <div th:if="${sent}" class="text-success fs-6">
-                            Thanks! Your improvement idea was sent!
+                        <div th:if="${sent}" class="text-success fs-6" th:text="#{thanks}">
                         </div>
                     </form>
                 </div>
